--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,11 @@
+/* Universal Styles */
+
 html {
   font-size: 18px;
-  line-height: 1.4;
   font-family: Helvetica;
+}
+p {
+  line-height: 1.4;
 }
 h1 {
   font-size: 2rem;
@@ -13,6 +17,25 @@ h1 {
   width: 960px;
   margin: 0 auto;
 }
+@media only screen and (max-width: 1024px) {
+  .container {
+    width: 100%;
+  }
+  h1 {
+    font-size: 1.33rem;
+  }
+}
+@media only screen and (max-width: 560px) {
+  h1 {
+    font-size: 1rem;
+    text-align: center;
+  }
+  p {
+    font-size: 0.77rem;
+  }
+}
+/* Top Content Section */
+
 .hero .container {
   position: relative;
   top: 1rem;
@@ -28,7 +51,7 @@ h1 {
   display: flex;
   align-items: center;
 }
-.logo img {
+.logo img, .footerlogo img {
   height: 1.5rem;
   padding: 0 1rem 0 2rem;
 }
@@ -55,4 +78,130 @@ h1 {
   background-color: white;
   padding: 1.5rem 5rem;
   margin-right: -2rem;
+}
+@media only screen and (max-width: 1024px) {
+  .hero {
+    height: 22rem;
+  }
+  .hero .container {
+    position: static;
+  }
+  #sloganbox.container {
+    margin-top: 5rem;
+  }
+  .cta {
+    padding: 0.75rem 4rem;
+    margin-right: 2rem;
+  }
+}
+@media only screen and (max-width: 580px) {
+  .hero {
+    height: 17rem;
+    background-position: 20% 20%;
+  }
+  #sloganbox.container {
+    margin-top: 9rem;
+  }
+  .cta {
+    width: 100%;
+    margin: 0 0;
+    padding: 1rem 0;
+  }
+}
+
+/* Bottom Content Section */
+
+.callouts, .sections {
+  display: flex;
+  justify-content: center;
+}
+.callouts {
+  padding: 3rem 0;
+}
+.callout, .section {
+  display: flex;
+  flex-direction: column;
+}
+.callout {
+  width: 5rem;
+  height: 8rem;
+  padding: 0 3rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.callout img {
+  max-height: 4rem;
+  max-width: 5rem;
+}
+.callout p {
+  text-align: center;
+}
+.sections {
+  padding-bottom: 5rem;
+
+}
+.section {
+  width: 35%;
+  margin: 0 2.5%;
+}
+.section h4 {
+  background-color: cadetblue;
+  font-weight: bold;
+  color: white;
+  padding: 0.5rem 1.25rem;
+  margin-bottom: 1rem;
+  width: 10rem;
+}
+.section p {
+  line-height: 1.4;
+  color: gray;
+}
+@media only screen and (max-width: 580px)  {
+  .callouts {
+    flex-direction: column;
+    align-items: center;
+    padding: 3.77rem;
+  }
+  .callout {
+    max-height: 8rem;
+    justify-content: center;
+  }
+  #fittings {
+    margin: 1.54rem 0;
+  }
+  .sections {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section {
+    width: 100%;
+  }
+  .section p {
+    margin: 0 0 4rem 0.5rem;
+  }
+  .section h4 {
+    width: 100%;
+    text-align: center;
+  }
+}
+/* Footer Section */
+
+footer {
+  background-color: azure;
+}
+.footerlogo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 4rem 0 4rem 2rem;
+  color: gray;
+}
+@media only screen and (max-width: 580px) {
+  footer span {
+    display: none;
+  }
+  .footerlogo {
+    justify-content: center;
+    padding: 4rem 0;
+  }
 }
